--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "express-favicon": "^2.0.4",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -24,7 +25,7 @@
   },
   "scripts": {
     "devstart": "react-scripts start",
-    "start": "node server.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
