--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "web-vitals": "^2.1.4"
