--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-scripts": "5.0.1",
