--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^4.17.1",
     "@blueprintjs/popover2": "^1.13.5",
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -17,10 +18,12 @@
     "express": "^4.18.2",
     "express-favicon": "^2.0.4",
     "framer-motion": "^10.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
