--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-number-format": "^5.1.4",
@@ -30,7 +31,9 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
