--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-data-table-component": "^7.5.3",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-number-format": "^5.1.4",
