--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-data-table-component": "^7.5.3",
