--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-favicon": "^2.0.4",
     "framer-motion": "^10.0.1",
+    "immer": "^10.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
