--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@blueprintjs/core": "^4.17.1",
     "@blueprintjs/popover2": "^1.13.5",
     "@chakra-ui/icons": "^2.0.17",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-favicon": "^2.0.4",
     "framer-motion": "^10.0.1",
+    "graphql": "^16.8.1",
     "immer": "^10.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -40,7 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "devstart": "react-scripts start",
+    "devstart": "PORT=3001 react-scripts start",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
